<?xml version="1.0"?>
<package format="2">
  <name>synchronizer</name>
  <version>0.0.0</version>
  <description>The synchronizer package</description>

  <maintainer email="daniel.gehrig18@gmail.com">Daniel Gehrig</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <depend>sensor_msgs</depend>
  <depend>message_generation</depend>
  <depend>roscpp</depend>
  <depend>rosbag</depend>
  <depend>glog_catkin</depend>
  <depend>gflags_catkin</depend>
  <depend>dvs_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>prophesee_event_msgs</depend>
</package>
