<?xml version="1.0"?>
<package format="2">
  <name>eklt</name>
  <version>0.0.0</version>
  <description>The eklt package</description>

  <maintainer email="daniel.gehrig18@gmail.com">Daniel Gehrig</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <depend>ceres_catkin</depend>
  <depend>eigen_catkin</depend>
 
  <depend>sensor_msgs</depend>
  <depend>roscpp</depend>
  <depend>glog_catkin</depend>
  <depend>gflags_catkin</depend>
  <depend>dvs_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>image_geometry</depend>

</package>
